Fix alignment of Twts a bit better (align the actions and Twt post time)

--- a/static/css/twtxt.css
+++ b/static/css/twtxt.css
@@ -2,6 +2,14 @@ article p img {
     display: block;
 }
 
+article hgroup h3 {
+    margin-left: 60px;
+}
+
+article hgroup footer {
+    margin-left: 60px;
+}
+
 .invisible {
     visibility:hidden;
     width:0;
